# Deep_Learning_base_architechture_template

./: LICENSE  init_setup.sh  setup.cfg  setup.py  template.py
research/: trials.ipynb
