[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3 # intergration checks
    mypy>=0.971 # helps to check typing errors 
    flake8>=5.0.4 # helps to see mistakes in application
    tox>=3.25.1 # create working enviroment
    black>=22.8.0 # checks if written code follows python structure

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py